[style]fix spacing in header w. new container

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 body{
     height: 100vh;
     display: flex;
@@ -11,6 +9,8 @@ body{
 .header{
     display:flex;
     flex-direction: column;
+    align-items:center;
+
     background-color: #1F2937;
     padding-left: 120px;
     padding-right:120px;
@@ -19,11 +19,17 @@ body{
     
 }
 
+.header-container{
+    flex-grow:1;
+
+}
+
 .upper-header{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    
+    padding-bottom: 32px;
+    max-width: 700px;
 }
 
 .logo{
@@ -41,6 +47,7 @@ body{
 .lower-header{
     display:flex;
     justify-content:space-between;
+    max-width: 700px;
 }
 
 .left-lower-header{
@@ -89,6 +96,7 @@ p {
 
 .right-lower-header{
     align-self: center;
+    padding:16px;
 }
 
 
@@ -165,6 +173,7 @@ p {
     font-size: 36px;
     color: #1F2937;
     font-style: italic;
+    max-width: 700px;
 
 }
 
@@ -182,6 +191,9 @@ p {
     border-radius: 8px;
     margin: 36px;
     padding: 22px;
+    max-width: 560px;
+    align-self: center;
+    gap: 16px;
 }
 
 .left-call{
